# mini-social-network

./: .coveragerc  main.py  pyproject.toml  pytest.ini
api/: __init__.py
api/auth/: auth.py
api/auth/request/: auth.py
api/auth/response/: auth.py
api/chat/v1/: chat.py
api/chat/v1/schemas/: chat.py
api/friend/v1/: friend.py
api/friend/v1/schemas/: friend.py
api/home/: home.py
api/request/v1/: request.py
api/user/v1/: user.py
app/: server.py
app/auth/schemas/: jwt.py
app/auth/services/: jwt.py
app/chat/models/: message.py
app/chat/services/: message.py
app/friend/models/: friend.py
app/friend/schemas/: user.py
app/friend/services/: friend.py
app/request/models/: __init__.py  requestfriend.py
app/request/services/: request.py
app/user/models/: user.py
app/user/schemas/: user.py
app/user/services/: user.py
core/: config.py
core/db/: __init__.py  session.py
core/exceptions/: __init__.py  token.py  user.py
core/fastapi/dependencies/: __init__.py  permission.py
core/fastapi/middlewares/: __init__.py  authentication.py  response_log.py
core/fastapi/schemas/: __init__.py  current_user.py
core/helpers/: redis.py
core/helpers/cache/: __init__.py  cache_manager.py  cache_tag.py  custom_key_maker.py  redis_backend.py
core/repository/: base.py  enum.py
core/utils/: __init__.py  token_helper.py
docker/db/: Dockerfile
migrations/: env.py
migrations/versions/: 005ce6e94401_create_user_table.py  0e531dcb2470_initial.py  76f64d712ebe_init.py  c310a12122ae_init.py  d10c0db322ab_init.py
tests/: conftest.py
tests/app/chat/: conftest.py  factories.py
tests/app/friend/: conftest.py  factories.py
tests/app/request/: conftest.py  factories.py
tests/app/user/: conftest.py  factories.py
(+9 files in other folders)
